<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Section-16</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_continue_game">ContinueGame</string>
    <string name="title_activity_initialize">Initialize</string>
    <string name="title_activity_high_score_screen">HighScoreScreen</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
	<string name="A">A</string>
	<string name="B">B</string>
	<string name="C">C</string>
	<string name="D">D</string>
	<string name="E">E</string>
	<string name="placeholder">placeholder</string>
	<string name="confirm">Confirm Answer</string>
	<string name="dialogresponse">Response</string>
	<string name="Ok">OK</string>
	<string name="lives">Lives: %s</string>
	<string name="hint">Hint</string>
	<string name="reset">Reset Highscores</string>
	<string name="testQuestion">Test Question</string>
	<string name="question">%s</string>
	<color name="black">#000000</color>
	<color name="green">#00FF00</color>
	<color name="white">#ffffff</color>
</resources>
