<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget32"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A" />

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B" />

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C" />

        <RadioButton
            android:id="@+id/choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D" />
    </RadioGroup>

    <TextView
        android:id="@+id/questionBox"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="confirmAnswer"
        android:text="@string/confirm" />
    <TextView
         android:id="@+id/lives"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/lives"/>
    <Button 
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lives"
        android:layout_alignParentRight="true"
        android:text="@string/hint" 
        />

</RelativeLayout>