<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget32"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#424242"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/choice4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/questionBox"
        android:layout_width="475dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:maxLines = "50"
		android:scrollbars = "vertical"
        android:layout_margin="15dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:onClick="confirmAnswer"
        android:text="@string/confirm"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lives"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:onClick="displayHint"
        android:text="@string/hint"
        android:textColor="@color/white" />

</RelativeLayout>